--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="/">shubham</a>
+            <a class="navbar-brand" href="/make/">shubham</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -39,13 +39,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/make/">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">about</a>
+                        <a class="nav-link" href="/make/about">about</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact">contact</a>
+                        <a class="nav-link" href="/make/contact">contact</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -61,10 +61,10 @@
                         </div>
                     </li>
                     <div class="container">
-                    <a href="/signin" class="">Register</a>
+                    <a href="/make/signin" class="">Register</a>
                 </div>
                     <div class="container">
-                    <a href="/signin" class="">Login</a>
+                    <a href="/make/signin" class="">Login</a>
                 </div>
                   
                 </ul>
