--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
                         class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                         <div class="col p-4 d-flex flex-column position-static">
                             <strong class="d-inline-block mb-2 text-primary">World</strong>
-                            <h3 class="mb-0">Featured post</h3>
+                            <h3 class="mb-0">about python</h3>
                             <div class="mb-1 text-muted">Nov 12</div>
                             <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
                                 lead-in to additional content.</p>
-                            <a href="#" class="stretched-link">Continue reading</a>
+                            <a href="#" class="https://www.python.org/about/">Continue reading</a>
                         </div>
                         <div class="col-auto d-none d-lg-block">
-                             <img src="https://source.unsplash.com/1400x400/weekly?water
+                             <img src="https://source.unsplash.com/1400x400/weekly?python
                                 width="200" height="250" />
 
                         </div>
@@ -156,14 +156,14 @@
                         class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                         <div class="col p-4 d-flex flex-column position-static">
                             <strong class="d-inline-block mb-2 text-success">Design</strong>
-                            <h3 class="mb-0">Post title</h3>
+                            <h3 class="mb-0"> About Django</h3>
                             <div class="mb-1 text-muted">Nov 11</div>
                             <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
                                 additional content.</p>
-                            <a href="http//:google .com" class="stretched-link">Continue reading</a>
+                            <a href="https://www.djangoproject.com/start/overview/" class="stretched-link">Continue reading</a>
                         </div>
                         <div class="col-auto d-none d-lg-block">
-                            <img src="https://source.unsplash.com/weekly?coding
+                            <img src="https://source.unsplash.com/weekly?djnago
                     " width="200" height="250" alt="">
                         </div>
                     </div>
