--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <div class="mb-1 text-muted">Nov 12</div>
                             <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
                                 lead-in to additional content.</p>
-                            <a href="#" class="https://www.python.org/about/">Continue reading</a>
+                            <a href="https://www.python.org/about/" class="d-inline-block mb-2 text-success">Continue reading</a>
                         </div>
                         <div class="col-auto d-none d-lg-block">
                              <img src="https://source.unsplash.com/1400x400/weekly?python
