--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                               <h2>Go further with SHUBHAM</h2>
                               <p class="col-md-10 mx-auto lead font-weight-normal">
                                 Need something more than these examples contact me at<a href="https://themes.getbootstrap.com">,8755968766 email:875596sh@gmail.com</a>.
-                              <a href="https://google.com" class="btn btn-lg btn-outline-primary mb-3">thanks to visit nmste</a>
+                              <a href="https://google.com" class="btn btn-lg btn-outline-primary mb-3">thanks to visit Nmste india</a>
                            
                     </div>
 
