--- a/index.html
+++ b/index.html
@@ -236,13 +236,12 @@
                                         onmouseover="this.stop();" onmouseout="this.start();">
                                         <p class="fl_left">
 
-                                            <a href="pdf/Research Facility Notice.pdf" target="_blank" rel="noopener">
-                                                <font style="text-shadow: 0 0 1px;">Research Opportunity and Facilities
-                                                    in AKTU for UG and PG Students.</font><img width="33" height="16"
+                                            <a href="#" target="_blank" rel="noopener">
+                                                <font style="text-shadow: 0 0 1px;">Research Opportunity and about gate exam.</font><img width="33" height="16"
                                                     src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.thoughtco.com%2Fnouveau-neuf-french-words-for-new-1369482&psig=AOvVaw2VCE-Mbp3dWGK2JctbOS_y&ust=1599032916190000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNDL_v67x-sCFQAAAAAdAAAAABAP">
                                             </a>
                                             <a href="nba programm.html" target="_blank">
-                                                <font style="text-shadow: 0 0 1px;"> NBA Accredited UG Programs<img
+                                                <font style="text-shadow: 0 0 1px;">abot ies <img
                                                         width="33" height="16" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.thoughtco.com%2Fnouveau-neuf-french-words-for-new-1369482&psig=AOvVaw2VCE-Mbp3dWGK2JctbOS_y&ust=1599032916190000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNDL_v67x-sCFQAAAAAdAAAAABAP></font>
                                             </a> <a href="faculty warrior.html" target="_blank">
                                                 <font style="text-shadow: 0 0 1px;"> Faculty Warriors <img width="33"
@@ -250,7 +249,7 @@
                                             </a>
 
                                             <a href="nba pg program.html" target="_blank">
-                                                <font style="text-shadow: 0 0 1px;"> NBA Accredited PG Programs<img
+                                                <font style="text-shadow: 0 0 1px;"> about django<img
                                                         width="33" height="16" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.thoughtco.com%2Fnouveau-neuf-french-words-for-new-1369482&psig=AOvVaw2VCE-Mbp3dWGK2JctbOS_y&ust=1599032916190000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNDL_v67x-sCFQAAAAAdAAAAABAP"></font>
                                             </a>
                                             <a href="educational video.html" target="_blank">
@@ -260,11 +259,11 @@
                                                 <font style="text-shadow: 0 0 1px;"> Training and Placement Cell </font>
                                             </a> <img width="33" height="16" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.thoughtco.com%2Fnouveau-neuf-french-words-for-new-1369482&psig=AOvVaw2VCE-Mbp3dWGK2JctbOS_y&ust=1599032916190000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNDL_v67x-sCFQAAAAAdAAAAABAP"> <a
                                                 href="https://innovation.aktu.ac.in/" target="_blank">
-                                                <font style="text-shadow: 0 0 1px;">Kalam Centre for the Innovation and
+                                                <font style="text-shadow: 0 0 1px;">Centre for the Innovation and
                                                     Incubation of Startups</font>
                                             </a> <img width="33" height="16" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.thoughtco.com%2Fnouveau-neuf-french-words-for-new-1369482&psig=AOvVaw2VCE-Mbp3dWGK2JctbOS_y&ust=1599032916190000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNDL_v67x-sCFQAAAAAdAAAAABAP"><a
                                                 href="http://fdp.aktu.ac.in/" target="_blank">
-                                                <font style="text-shadow: 0 0 1px;">Faculty Development Display Portal
+                                                <font style="text-shadow: 0 0 1px;">Faculty Development
                                                 </font>
                                             </a>
                                             <font color="black">&nbsp; <img width="33" height="16"
@@ -286,7 +285,7 @@
                               </div>
                               <h2>Go further with SHUBHAM</h2>
                               <p class="col-md-10 mx-auto lead font-weight-normal">
-                                Need something more than these examples contact me at<a href="https://themes.getbootstrap.com">,8755968766 email:875596sh@gmail.com</a>.
+                                Need something more than these examples contact me at<a href="https://themes.getborap.com">,8755968766 email:875596sh@gmail.com</a>.
                               <a href="https://google.com" class="btn btn-lg btn-outline-primary mb-3">thanks to visit Nmste india</a>
                            
                     </div>
