--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown
+                            courses
                         </a>
                     
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#"></a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">DRDO</a>
+                            <a class="dropdown-item" href="#">GATE</a>
+                            <div class="dropdown-divider">SSC-JEE</div>
+                            <a class="dropdown-item" href="#">BARC</a>
                         </div>
                     </li>
                     <div class="container">
