--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active"> <img src="https://source.unsplash.com/1400x400/weekly?sea
+                <div class="carousel-item active"> <img src="https://source.unsplash.com/1400x400/weekly?coding
 " class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>WELCOME TO SHUBHAM BLOG</h5>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://source.unsplash.com/1400x400/weekly?rever
+                    <img src="https://source.unsplash.com/1400x400/weekly?python
 " class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://source.unsplash.com/1400x400/weekly?lake
+                    <img src="https://source.unsplash.com/1400x400/weekly?django
 " class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
